media queries now uses 0.1px instead of 1px to avoid overlap

--- a/packages/dnb-eufemia/src/style/core/utilities.scss
+++ b/packages/dnb-eufemia/src/style/core/utilities.scss
@@ -291,18 +291,23 @@ $breakpoint-offset: 0;
 // @include allAbove(medium){ styles go here.. }
 // $offset and $list are needed to provide global customization options
 @mixin allAbove($size, $offset: $breakpoint-offset, $list: $breakpoints) {
-  @media screen and (min-width: (if(map-has-key($list, $size), map-get($list, $size), #{$size}) + $offset + 0.0625em)) {
+  @media screen and (min-width: (if(map-has-key($list, $size), map-get($list, $size), $size) + $offset + 0.00625)) {
     @content;
   }
 }
 @mixin allBelow($size, $offset: $breakpoint-offset, $list: $breakpoints) {
-  @media screen and (max-width: (if(map-has-key($list, $size), map-get($list, $size), #{$size}) + $offset)) {
+  @media screen and (max-width: (if(map-has-key($list, $size), map-get($list, $size), $size) + $offset)) {
     @content;
   }
 }
-@mixin allBetween($fromSize, $toSize, $fromOffset: null, $toOffset: null) {
-  @include allBelow($toSize, if($toOffset == null, 0, $toOffset)) {
-    @include allAbove($fromSize, if($fromOffset == null, 0, $fromOffset)) {
+@mixin allBetween(
+  $fromSize,
+  $toSize,
+  $fromOffset: $breakpoint-offset,
+  $toOffset: $breakpoint-offset
+) {
+  @include allBelow($toSize, $toOffset) {
+    @include allAbove($fromSize, $fromOffset) {
       @content;
     }
   }
